# mpi-stubs

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  mpi.c  mpi.h  pyproject.toml
.github/workflows/: docker.yml  test.yml  wheels.yml
include/: mpi.h  mpif.h
python/mpi_stubs/: __init__.py
src/: mpi.c  mpi.f90
tests/: test_mpi_stub.c
